--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Connor McArthur
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Data Engineer. Co-Founder @ Fishtown Analytics.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: https://avatars1.githubusercontent.com/u/846979
 
 #
 # Flags below are optional
